RESOLVED FIXED 118911
fourthTier: Structure::isValidOffset() should be able to tell you if you're loading a valid JSValue, and not just not crashing
https://bugs.webkit.org/show_bug.cgi?id=118911
Summary fourthTier: Structure::isValidOffset() should be able to tell you if you're l...
Filip Pizlo
Reported 2013-07-19 11:18:35 PDT
We could also have a separate method like "willNotCrash(offset)", but that's not what isValidOffset() is intended to mean.
Attachments
the patch (1.57 KB, patch)
2013-07-19 11:19 PDT, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2013-07-19 11:19:43 PDT
Created attachment 207127 [details] the patch
Geoffrey Garen
Comment 2 2013-07-19 13:39:23 PDT
Comment on attachment 207127 [details] the patch r=me
Filip Pizlo
Comment 3 2013-07-19 19:52:32 PDT
Note You need to log in before you can comment on or make changes to this bug.