fourthTier: Structure::isValidOffset() should be able to tell you if you're loading a valid JSValue, and not just not crashing https://bugs.webkit.org/show_bug.cgi?id=118911

Reviewed by Geoffrey Garen.

We could also have a separate method like "willNotCrash(offset)", but that's not
what isValidOffset() is intended to mean.

* runtime/Structure.h:
(JSC::Structure::isValidOffset):

Canonical link: https://commits.webkit.org/137069@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153285 268f45cc-cd09-0410-ab3c-d52691b4dbfc